Updates the Android Splash Screen

--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -5,17 +5,39 @@
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="268dp"
+        android:layout_centerInParent="true"
         android:background="@color/splash_white"
         android:scaleType="center"
         android:src="@drawable/launch_screen" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="191dp"
-        android:layout_height="99dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/logo"
+        android:layout_centerHorizontal="true"
         android:text="Jester"
+        android:textAlignment="center"
+        android:textColor="#1C72E3"
         android:textSize="60sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
+        android:text="Powered by React Native"
+        android:textAlignment="center"
+        android:textColor="#1C72E3"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="visible" />
 </RelativeLayout>
