--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/splash_white"
     android:orientation="vertical">
 
     <ImageView
@@ -10,6 +12,7 @@
         android:layout_height="268dp"
         android:layout_centerInParent="true"
         android:background="@color/splash_white"
+        android:elevation="1dp"
         android:scaleType="center"
         android:src="@drawable/launch_screen" />
 
@@ -40,4 +43,5 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="visible" />
+
 </RelativeLayout>
